welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: not found: type Green
while (!getColorSol():Green)
                      ^Balin:2: error: not found: value getColorSol
while (!getColorSol():Green)
        ^